<resources>
    <string name="app_name">Pass Generator</string>
    <string name="copy_item">Copy</string>
    <string name="passTemporary">Press >></string>
    <string name="clear">CLEAR</string>
    <string name="cleaned">The clipboard has been cleaned</string>
    <string name="_10">10</string>
    <string name="letters_lowercase_a_z">Letters Lowercase (a-z)</string>
    <string name="amp"><![CDATA[~!@#$%^&;*+-/.,\{}[]();:|?="`]]></string>
    <string name="strong_password">Strong password</string>
    <string name="password_length">Password length:</string>
    <string name="letters_uppercase_a_z">Letters Uppecase (A-Z)</string>
    <string name="digits_0_9">Digits (0-9)</string>
    <string name="restore_text_special">Restore text special</string>
    <string name="get_a_new_password">Get a new password</string>
    <string name="length_of_characters">Length of characters</string>
    <string name="special_characters_selected">special characters selected</string>
    <string name="copy_to_clipboard">copied to clipboard</string>
    <string name="remove_strong_to_continue">Remove strong password to continue.</string>
    <string name="already_is_clean">The clipboard already is clean.</string>
    <string name="length_is_empty">The length is empty.</string>
</resources>